fix alignment

--- a/main.css
+++ b/main.css
@@ -2,8 +2,10 @@
   display: inline-flex;
   flex-flow: wrap;
   width: 550px;
-  height: 550px;
+  height: auto;
   margin: 25px;
+  border: 1px solid #ccc;
+  padding: 15px;
 }
 
 .section {
